# typespec

./: build.ts  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.chronus/changes/: typespec-wasm-component-2025-9-29.md
.github/: copilot-instructions.md
test-js/: package.json
test-js/src/: index.ts
test-rs/: .gitignore  Cargo.toml  package.json  wkg.toml
test-rs/src/: main.rs
test-rs/wit/: world.wit
