[package]
name = "test-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "test:app"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"ts:compiler-show" = { path = "../packages/compiler-show/wit" }
